[gd_scene load_steps=5 format=3 uid="uid://dkyw7g6lfuhi0"]

[ext_resource type="Script" path="res://src/scenes/Puzzles/Timetravel/TimetravelPuzzle.gd" id="1_30u5y"]
[ext_resource type="PackedScene" uid="uid://bqbvjbhatg4xi" path="res://src/scenes/Puzzles/Timetravel/Pineapple.tscn" id="2_8bw0p"]
[ext_resource type="AudioStream" uid="uid://o0mp0wvfprgg" path="res://assets/Pixel Adventure/Sounds/eating.mp3" id="3_xc48c"]
[ext_resource type="FontFile" uid="uid://ckc2vx5rrmxen" path="res://assets/Fonts/CustomFont.ttf" id="4_g82f6"]

[node name="TimetravelPuzzle" type="Node2D" node_paths=PackedStringArray("pineapple_collection")]
script = ExtResource("1_30u5y")
pineapple_collection = [NodePath("Pineapple1"), NodePath("Pineapple2"), NodePath("Pineapple3"), NodePath("Pineapple4"), NodePath("Pineapple5"), NodePath("Pineapple6")]

[node name="Pineapple1" parent="." instance=ExtResource("2_8bw0p")]
collision_layer = 2
collision_mask = 2

[node name="Pineapple2" parent="." instance=ExtResource("2_8bw0p")]
collision_layer = 2
collision_mask = 2

[node name="Pineapple3" parent="." instance=ExtResource("2_8bw0p")]
collision_layer = 2
collision_mask = 2

[node name="Pineapple4" parent="." instance=ExtResource("2_8bw0p")]
collision_layer = 2
collision_mask = 2

[node name="Pineapple5" parent="." instance=ExtResource("2_8bw0p")]
collision_layer = 2
collision_mask = 2

[node name="Pineapple6" parent="." instance=ExtResource("2_8bw0p")]
collision_layer = 2
collision_mask = 2

[node name="countdown_timer" type="Timer" parent="."]
one_shot = true

[node name="Pickup_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_xc48c")
bus = &"SFX"

[node name="Player_1_Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("4_g82f6")
theme_override_font_sizes/font_size = 18

[node name="Player_2_Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("4_g82f6")
theme_override_font_sizes/font_size = 18
